# Project-Vertex

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml  requirements.txt  vercel.json
api/: index.py
backend/: Dockerfile  alembic.ini  init_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: __init__.py  entities.py  state.py
backend/app/core/: config.py  database.py  security.py
backend/app/db/: seed.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  entity_service.py  link_service.py  sync_service.py  token_service.py
backend/db/init/: 01_roles.sql
backend/tests/: conftest.py  test_pagination.py  test_rls.py  test_sync.py  test_tokens.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: sw.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: CameraViewfinder.tsx  Header.tsx  LinksDirectory.tsx  SyncPanel.tsx
frontend/src/state/: linksStore.ts
frontend/src/state/__tests__/: linksStore.test.ts
frontend/src/utils/: api.ts
